deploy/harbor-minio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: harbor-minio
    component: minio
  name: harbor-minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor-minio
      component: minio
  template:
    metadata:
      labels:
        app: harbor-minio
        component: minio
    spec:
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        args:
        - server
        - /data
        - --console-address
        - :9001
        ports:
        - containerPort: 9000
          name: api
        - containerPort: 9001
          name: console
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: 250m
            memory: 512Mi
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: harbor-minio
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor-minio
    component: minio
  name: harbor-minio
spec:
  ports:
  - name: api
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: console
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: harbor-minio
    component: minio
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: harbor-minio
    component: minio
  name: harbor-minio-api
spec:
  port:
    targetPort: 9000
  to:
    kind: Service
    name: harbor-minio
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: harbor-minio
    component: minio
  name: harbor-minio-console
spec:
  port:
    targetPort: 9001
  to:
    kind: Service
    name: harbor-minio
    weight: 100
  wildcardPolicy: None
